--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parse": "^4.16.3",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1"
   }
 }
